# BitcoinArmory

./: .gitignore  .gitmodules  ArmoryDB.py  ArmoryQt.command  ArmoryQt.py  ArmorySetup.nsi  BitcoinArmory.spec.in  BitcoinArmoryQt.py  CppBlockUtils.py  Jenkinsfile  LICENSE  LICENSE-ATI  LICENSE-MIT  LICENSE.py  LICENSE_qt4reactor.txt  Makefile  Makefile.am  Makefile.old  PyBtcEngine.py  README  README.md  README.reproducible.md  README_ArmoryDB.md  README_OSX.md  README_macOS.md  SDM.py  TreeViewGUI.py  Using_Armory.README  Using_PyBtcEngine.README  WindowsBuild.txt  Windows_Build_Instructions.rtf  announcefetch.py  armory-cli.py  armory.mainnet.watchonly.wallet  armory.testnet.watchonly.wallet  armory_2Adaa81b5_.watchonly.wallet  armorycolors.py  armoryd.README  armoryd.py  armoryengine.py  (+71 more)
.tx/: config
ArmoryStandalone/: ArmorySetup.nsi  README.txt
BitTornado/: ConfigDir.py  ConfigReader.py  CreateIcons.py  CurrentRateMeasure.py  HTTPHandler.py  RateLimiter.py  RateMeasure.py  RawServer.py  ServerPortHandler.py  SocketHandler.py  __init__.py  bencode.py  bitfield.py  download_bt1.py  inifile.py  iprangeparse.py  launchmanycore.py  natpunch.py  parseargs.py  parsedir.py  piecebuffer.py  selectpoll.py  subnetparse.py  torrentlistparse.py  zurllib.py
PublicKeys/: AndresenCodeSign.asc  (+4 more)
cppForSwig/: ArmoryEngine_MSVS2005.sln  ArmoryEngine_MSVS2005.vcproj  AtomicInt32.h  BDM_Server.cpp  BDM_Server.h  BDM_mainthread.cpp  BDM_mainthread.h  BDM_seder.cpp  BDM_seder.h  BDM_supportClasses.cpp  BDM_supportClasses.h  BinaryData.cpp  BinaryData.h  BinaryDataMMAP.cpp  BinaryDataMMAP.h  BinaryDataMMAP_POSIX.cpp  BinaryDataMMAP_POSIX.h  BinaryDataMMAP_Windows.cpp  BinaryDataMMAP_Windows.h  BitcoinArmory.sln  BitcoinArmoryEngine.sln  BitcoinArmoryEngine.vcxproj  BitcoinArmoryEngine_MSVS2005.sln  BitcoinArmoryEngine_MSVS2005.vcproj  BitcoinP2P.cpp  BitcoinP2p.h  BlockDataManagerConfig.cpp  BlockDataManagerConfig.h  BlockDataMap.cpp  BlockDataMap.h  BlockDataViewer.cpp  BlockDataViewer.h  BlockObj.cpp  BlockObj.h  BlockObjFileRef.h  BlockObjRef.cpp  BlockObjRef.h  BlockUtils.cpp  BlockUtils.h  BlockUtilsSWIG.cpp  (+137 more)
cppForSwig/BDM_Client/: BDM_Client.vcxproj  BDM_Client.vcxproj.filters  build_installer_64.bat
cppForSwig/BitcoinArmory_CppTests/: BitcoinArmory_CppTests.vcxproj  BitcoinArmory_CppTests.vcxproj.filters
cppForSwig/BitcoinArmory_SwigDLL/: BitcoinArmory_SwigDLL.vcxproj  BitcoinArmory_SwigDLL.vcxproj.filters  build_installer.bat  build_installer_64.bat
cppForSwig/BlockDataManager/: BlockDataManager.vcxproj  BlockDataManager.vcxproj.filters
cppForSwig/BlockDataManager/fcgi/: Makefile.am  Makefile.in  README  configure  configure.in  fcgi_config.h
cppForSwig/BlockDataManager/fcgi/cgi-fcgi/: cgi-fcgi.c
cppForSwig/BlockDataManager/fcgi/include/: fcgiapp.h  fcgios.h
cppForSwig/BlockDataManager/fcgi/libfcgi/: fcgi_stdio.c  fcgiapp.c  fcgio.cpp  os_unix.c  os_win32.c
cppForSwig/ContainerTests/: ContainerTests.vcxproj  ContainerTests.vcxproj.filters
cppForSwig/DB1kIterTest/: DB1kIterTest.vcxproj  DB1kIterTest.vcxproj.filters
cppForSwig/LMDB_Win/: LMDB_Win.vcxproj  LMDB_Win.vcxproj.filters
cppForSwig/bech32/: bip-witaddr.mediawiki
cppForSwig/bech32/demo/: Makefile  demo.html  style.css
cppForSwig/bech32/ecc/javascript/: bech32_ecc.js  segwit_addr_ecc.js
cppForSwig/bech32/ref/c/: tests.c
cppForSwig/bech32/ref/c++/: segwit_addr.cpp  tests.cpp
cppForSwig/bech32/ref/go/: test.sh
cppForSwig/bech32/ref/go/src/bech32/: bech32_test.go
cppForSwig/bech32/ref/haskell/: LICENSE  README.md  bech32-haskell.cabal  stack.yaml
cppForSwig/bech32/ref/haskell/src/Codec/Binary/: Bech32.hs
cppForSwig/bech32/ref/haskell/test/: Spec.hs
cppForSwig/bech32/ref/javascript/: bech32.js  segwit_addr.js  tests.js
cppForSwig/bech32/ref/python/: tests.py
cppForSwig/bech32/ref/ruby/: bech32.rb  segwit_addr.rb  test_bech32.rb
cppForSwig/bech32/ref/rust/: Cargo.toml  README.md
cppForSwig/bech32/ref/rust/src/: bech32.rs  lib.rs  wit_prog.rs
cppForSwig/cryptopp/: DetSign.cpp  DetSign.h  Makefile  Makefile.am  Makefile.old  a.out  algparam.h  config.h  configure.ac  cpu.h  cryptest.sln  cryptlib.cpp  cryptlib.vcproj  cryptopp.vcxproj  cryptopp.vcxproj.filters  eccrypto.h  fipstest.cpp  misc.h  oaep.cpp  pubkey.h  regtest.cpp  rijndael.cpp  wake.cpp  zinflate.cpp
cppForSwig/gtest/: BinaryDataTest.cpp  ContainerTests.cpp  CppBlockUtilsTests.cpp  CppBlockUtilsTests_windows_stub.cpp  DB1kIterTest.cpp  Makefile  Makefile.am  README  SupernodeTests.cpp  computecov.sh
cppForSwig/gtest/ldbtestdir/: .gitignore
cppForSwig/guardian/: guardian.cpp  guardian.sln  guardian.vcproj  guardian.vcxproj  guardian.vcxproj.filters
cppForSwig/leveldb/: Makefile  build_detect_platform
cppForSwig/leveldb/db/: c.cc
cppForSwig/leveldb/include/leveldb/: db.h
cppForSwig/leveldb/port/: atomic_pointer.h  port.h  port_posix.h
cppForSwig/leveldb_msvc11_port/: leveldb_msvc11_port.vcxproj  leveldb_msvc11_port.vcxproj.filters
cppForSwig/leveldb_windows_port/: README.txt  leveldb_msvc11_port.vcxproj  leveldb_msvc11_port.vcxproj.filters
cppForSwig/leveldb_windows_port/win32_posix/: Instructions.txt  Win_TranslatePath.cpp  Win_TranslatePath.h  dirent_win32.c  dirent_win32.cpp  dirent_win32.h  file.h  mman.cpp  mman.h  pthread.h  pthread_win32port.cpp  unistd.h  win32_posix.cc  win32_posix.h
cppForSwig/leveldbwin/: README.txt  ReadMe
cppForSwig/leveldbwin/leveldb_src/include/leveldb/: cache.h  comparator.h  db.h  env.h  iterator.h  options.h  slice.h  status.h  table.h  table_builder.h  write_batch.h
cppForSwig/leveldbwin/leveldb_src/port/: port.h
cppForSwig/leveldbwin/win32_impl_src/: env_win32.cc  env_win32.h  leveldb.def  leveldb.h  port_win32.cc  port_win32.h  unistd.h  win32exports.h
cppForSwig/lmdb/: Makefile.am  lmdb.h  lmdbpp.cpp  lmdbpp.h
cppForSwig/lmdb/.deps/: lmdbpp.Po  mdb.Po  midl.Po
cppForSwig/mdb/: lmdb.h  mdb.c
cppForSwig/msvc11_port/: endian.h  win32_posix.cc  win32_posix.h
cppForSwig/reorgTest/: LBZC.tx  ZCtx.tx  blkdata.h  reorgdebug.txt  reorgtest.hex
demo/: demo.js  (+1 more)
(+422 files in other folders)
